--- a/styles/menuWindow.css
+++ b/styles/menuWindow.css
@@ -92,10 +92,11 @@ button[title='disabled'] {
   overflow: auto;
 }
 
-#entryForm {
+#entryForm, #sessionName {
   background-color: #f692b2;
   border-radius: 30px 0px 30px 0px;
   padding: 20px;
+  border: none;
 }
 
 #entries {
@@ -149,4 +150,8 @@ button[title='disabled'] {
 
 #form-errors p {
   margin: 0;
+}
+
+#sessionName {
+  display: none;
 }
